fixed arrow spacing

--- a/css/signs.css
+++ b/css/signs.css
@@ -444,6 +444,9 @@
 	border-color: var(--black) !important;
 	color: var(--black) !important;
 }
+.otherSymbols + .actionMessage {
+	padding-right: .2rem;
+}
 
 .exitTab {
 	display: flex;
@@ -484,12 +487,25 @@
 	line-height: 0; /* Makes space text (arrow) takes up minimal */
 
 	display: inline-block;
-	margin: -0.5rem 0.05rem 0.05rem .5rem;
+	margin: -0.5rem 0.05rem 0.05rem 5rem;
 	padding: 0 0.1rem 0 0.05rem;
 }
 
+.arrowContainer {
+	display: inline-flex;
+}
+.centerText .arrow {
+	margin-right: .5rem;
+	margin-top: -.25rem;
+}
 .arrow:first-child {
 	margin-left: 0.05rem;
+}
+.arrow:last-child {
+	margin-right: .05rem;
+}
+.actionMessage + .arrow {
+	margin-left: .5rem;
 }
 
 .numeral {
@@ -500,4 +516,13 @@
 }
 .numeral:last-child {
 	padding-left: 0.5rem;
+}
+.centerText .numeral:last-child {
+	padding-left: 0rem;
+}
+.centerText .rotate180 {
+	-moz-transform: rotate(180deg) translateY(-1rem);
+    -o-transform: rotate(180deg) translateY(-1rem);
+    -webkit-transform: rotate(180deg) translateY(-1rem);
+	transform: rotate(180deg) translateY(-1rem);
 }
